--- a/report/index.tex
+++ b/report/index.tex
@@ -2,22 +2,21 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{lmodern}
-\usepackage[francais]
 
-\title{Étude pratique }
-\author{Maximilien Richer}
-\author{François Bochet}
-\author{Axel Caro}
-
+\title{Étude pratique}
+\author{Axel Caro, François Bochet, Maximilien Richer}
+\date{Année 2013/2014}
 
 \begin{document}
 
-\maketitle
-\tableofcontents
+\maketitle %affichage du titre
+\tableofcontents %table des matières
 
-\begin{abstract}
-\end{abstract}
+\chapter{Introduction}
 
-\chapter{}
+\section{Latexila}
+
+\section{Compiler le projet}
+\subsection{Jhbuild}
 
 \end{document}
