--- a/report/index.tex
+++ b/report/index.tex
@@ -4,10 +4,10 @@
 \usepackage{lmodern}
 
 \title{Étude pratique}
-\author{Axel Caro, François Bochet, Maximilien Richer}
-\date{Année 2013/2014}
+\author{Axel Caro\\François Bochet\\Maximilien Richer}
+\date{2014-2015}
 
-\begin{document}
+\begin{report}
 
 \maketitle %affichage du titre
 \tableofcontents %table des matières
@@ -19,4 +19,7 @@
 \section{Compiler le projet}
 \subsection{Jhbuild}
 
-\end{document}
+\section{Résumé}
+\section{Abstract}
+
+\end{report}
