Add wc -l output on src/

--- a/report/index.tex
+++ b/report/index.tex
@@ -4,10 +4,10 @@
 \usepackage{lmodern}
 
 \title{Étude pratique}
-\author{Axel Caro\\François Bochet\\Maximilien Richer}
+\author{Axel Caro\and François Bochet\and Maximilien Richer}
 \date{2014-2015}
 
-\begin{report}
+\begin{document}
 
 \maketitle %affichage du titre
 \tableofcontents %table des matières
@@ -15,11 +15,9 @@
 \chapter{Introduction}
 
 \section{Latexila}
-
 \section{Compiler le projet}
 \subsection{Jhbuild}
-
-\section{Résumé}
-\section{Abstract}
-
-\end{report}
+\label{testing}
+\begin{
+\end{lstlisting}
+\end{document}
