--- a/report/index.tex
+++ b/report/index.tex
@@ -15,9 +15,9 @@
 \chapter{Introduction}
 
 \section{Latexila}
+\label{latexila}
+  Latexila est un projet d'éditeur LaTeX pour le projet GNOME
 \section{Compiler le projet}
-\subsection{Jhbuild}
-\label{testing}
-\begin{
-\end{lstlisting}
+  \subsection{Jhbuild}
+  \label{jhbuild}
 \end{document}
