--- a/report/exptech.sty
+++ b/report/exptech.sty
@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     STYLE POUR LES EXPOSÉS TECHNIQUES 
-%         3e année INSA de Rennes
+%     STYLE POUR LES EXPOSÃ‰S TECHNIQUES 
+%         3e annÃ©e INSA de Rennes
 %
 %             NE PAS MODIFIER
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -48,9 +48,9 @@
 \pagestyle{myheadings}
 \bibliographystyle{plain-fr}
 
-\setcounter{tocdepth}{3}   % Niveau jusqu'où numéroter les titres (table des mat)
-\setcounter{secnumdepth}{3}% Niveau jusqu'où numéroter les titres (dans texte)
+\setcounter{tocdepth}{3}   % Niveau jusqu'oÃ¹ numÃ©roter les titres (table des mat)
+\setcounter{secnumdepth}{3}% Niveau jusqu'oÃ¹ numÃ©roter les titres (dans texte)
 
-\sloppy % Baisse le taux des césures
+\sloppy % Baisse le taux des cÃ©sures
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
