--- a/report/index.tex
+++ b/report/index.tex
@@ -40,14 +40,16 @@ La compilation d'un projet GNOME est un processus complexe pour un non-initié. 
 \label{sub:git}
 Git est le CVS utilisé par la très grande majorité des projets open-source. LaTeXiLa est hébergé sur le dépôt du projet Gnome, mais un mirroir est diponible sur Github %adresse 
 Pour ce pojet, l'équipe a crée un \textit{fork} du dépot principale sur Github et a travaillé sur une branche annexe, régulièrement mise à jour à partir du dépot officiel.
-Les soumissions sont faites via le bugzilla du projet Gnome, qui permet au mainteneur de commenter le code soumis.
+Les soumissions sont faites via le bugzilla du projet Gnome, qui permet au mainteneur de commenter le code soumis. Il s'ensuit ensuite un va et vient entre le mainteneur et le développeur jusqu'à la fusion du patch dans la branche principale.
 % subsection git (end)
 
 \section{Tâche à réaliser} % (fold)
 \label{sec:tache_a_realiser}
-
-\section{Réalisation}
+La tâche à réaliser est l'amélioration de la complétion des références.
 
 % section tâche_à_réaliser (end)
+\section{Réalisation}
+La réalisation s'est faite par petits pas. Sur une base de deux semaines de travail, l'équipe se donnait un objectif à atteindre.
+
 
 \end{document}
