--- a/report/index.tex
+++ b/report/index.tex
@@ -45,11 +45,26 @@ Les soumissions sont faites via le bugzilla du projet Gnome, qui permet au maint
 
 \section{Tâche à réaliser} % (fold)
 \label{sec:tache_a_realiser}
-La tâche à réaliser est l'amélioration de la complétion des références.
+La tâche à réaliser est l'amélioration de la complétion des références. La difficultée est de construire une complétion dynamiques
 
 % section tâche_à_réaliser (end)
+
 \section{Réalisation}
-La réalisation s'est faite par petits pas. Sur une base de deux semaines de travail, l'équipe se donnait un objectif à atteindre.
+La réalisation s'est faite par petits pas. Sur une base de deux semaines de travail, l'équipe se donnait un objectif à atteindre pour le point suivant avec l'encadrant.
+Ces points bi-hebdomadaires permettaient de discuter des directions à prendre 
+
+\subsection{Intégration d'une recherche au document courant}
+Pour commencer, nous avons utilisé un parseur existant, celui permettant de construire l'arbre représentatif de la struture des documents.
+
+<schéma: diagramme de séquence ?>
+
+Il a ensuite fallut intégrer ces résultats à la complétion.
+
+<code de la structure de complétion> 
+
+\subsection{Intégration d'une recherche à plusieurs documents}
+
+\subsection{Intégration des fichiers non-ouverts}
 
 
 \end{document}
