Add chapters and remove tableofcontent

--- a/report/index.tex
+++ b/report/index.tex
@@ -11,7 +11,7 @@
 \begin{document}
 
 \maketitle %affichage du titre
-\tableofcontents %table des matières
+% \tableofcontents %table des matières
 
 \section{Remerciments} % (fold)
 \label{cha:remerciments}
@@ -26,8 +26,8 @@ Cette étude pratique a été pour nous l'occasion de découvrir le fonctionemen
 
 Latexila est un projet d'éditeur LaTeX pour le projet GNOME
 
-\section{Compiler le projet}
-\label{sec:compiler}
+\chapter{Compiler le projet}
+\label{cha:compiler}
 La compilation d'un projet GNOME est un processus complexe pour un non-initié. En effets, elle demande certaines conaissances dans le fonctionement des gestionaires de paquet ansi que des modes de focntionement des distributions Linux modernes.
 
 \subsection{Jhbuild}
@@ -49,7 +49,7 @@ La tâche à réaliser est l'amélioration de la complétion des références. L
 
 % section tâche_à_réaliser (end)
 
-\section{Réalisation}
+\chapter{Réalisation}
 La réalisation s'est faite par petits pas. Sur une base de deux semaines de travail, l'équipe se donnait un objectif à atteindre pour le point suivant avec l'encadrant.
 Ces points bi-hebdomadaires permettaient de discuter des directions à prendre 
 
@@ -63,6 +63,8 @@ Il a ensuite fallut intégrer ces résultats à la complétion.
 <code de la structure de complétion> 
 
 \subsection{Intégration d'une recherche à plusieurs documents}
+
+L'étape suivante a été l'intégration de 
 
 \subsection{Intégration des fichiers non-ouverts}
 
