Fix the problem with exptech.sty
You can't have a package encode in utf-8 and another in latin-1.
So I decided to keep utf-8 and comment the faulty line in the .sty.

--- a/report/exptech.sty
+++ b/report/exptech.sty
@@ -7,7 +7,7 @@
 
 \usepackage[dvips]{graphicx}
 \usepackage[T1]{fontenc}
-\usepackage[latin1]{inputenc}
+%\usepackage[latin1]{inputenc}
 \usepackage[french]{babel} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
