--- a/report/index.tex
+++ b/report/index.tex
@@ -2,7 +2,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{lmodern}
-%\usepackage{exptech}
+\usepackage{exptech}
 
 \title{Étude pratique : Amélioration de la complétion automatique de LaTeXila}
 \author{Axel Caro\and François Bochet\and Maximilien Richer}
