--- a/report/index.tex
+++ b/report/index.tex
@@ -51,11 +51,11 @@ Latexila est un projet d'éditeur LaTeX pour le projet Gnome, dont le développe
 % need ref for WISWIG
 %see more @https://wiki.gnome.org/Apps/LaTeXila/History
 
-\subsubsection{À propos de \LaTeX{}}
+\subsection{À propos de \LaTeX{}}
 LaTeX est un language utilisé pour la composition de documents. Il permet notamment de mettre en place des feuilles de style normalisées ou encore de construire des expressions mathématiques.
 % write something here ?
 
-\subsubsection{Le language Vala}
+\subsection{Le language Vala}
 \label{sss:vala}
 Vala est un laguage développé pour le projet Gnome. Il vise à être une alternative au C\# et au Java en proposant une syntaxe puissante pour faire de la programation orientée objet. Il se base sur la librairie GObject et est compilé en C via la commande `valac`.
 
