--- a/report/index.tex
+++ b/report/index.tex
@@ -113,7 +113,7 @@ La version 2.2 de LaTeXiLa fournit une complétion exhaustive des éléments sta
 La réalisation s'est faite par petits pas. Sur une base de deux semaines de travail, l'équipe se donnait un objectif à atteindre pour le point suivant avec l'encadrant.
 Ces points bi-mensuels permettaient de discuter des directions à prendre pour le développement.
 
-\subsection{Intégration d'une recherche au document courant}
+\section{Intégration d'une recherche au document courant}
 Pour commencer, nous avons utilisé un parseur existant, celui permettant de construire l'arbre représentatif de la struture des documents.
 
 <schéma: diagramme de séquence ?>
@@ -122,11 +122,11 @@ Il a ensuite fallut intégrer ces résultats à la complétion.
 
 <code de la structure de complétion> 
 
-\subsection{Intégration d'une recherche à plusieurs documents}
+\section{Intégration d'une recherche à plusieurs documents}
 
 L'étape suivante a été l'intégration de 
 
-\subsection{Intégration des fichiers non-ouverts}
+\section{Intégration des fichiers non-ouverts}
 
 \chapter{Conclusion}
 Cette étude pratique a été pour nous l'occasion de découvrir le fonctionement des projets open-source.
