Add vala sample

--- a/report/index.tex
+++ b/report/index.tex
@@ -57,7 +57,14 @@ LaTeX est un language utilisé pour la composition de documents. Il permet notam
 
 \subsection{Le language Vala}
 \label{sss:vala}
-Vala est un laguage développé pour le projet Gnome. Il vise à être une alternative au C\# et au Java en proposant une syntaxe puissante pour faire de la programation orientée objet. Il se base sur la librairie GObject et est compilé en C via la commande `valac`.
+Vala est un laguage développé pour le projet Gnome. Il vise à être une alternative au C\# et au Java en proposant une syntaxe puissante pour la programation orientée objet.
+Il se base sur la librairie GObject et est compilé en C via la commande `valac`.
+
+\begin{lstlisting} % TODO encadrer
+void main () {
+    print ("hello, world\n");
+}
+\end{lstlisting}\textit{https://wiki.gnome.org/Projects/Vala/BasicSample}
 
 \section{Compiler LaTeXila}
 \label{cha:compiler}
