--- a/report/index.tex
+++ b/report/index.tex
@@ -41,23 +41,23 @@ Nous remercions Arnaud Blouin, notre encadrant, pour sa disponibilité et ses co
 
 \chapter{Introduction}
 \label{cha:Introduction}
-Les \textit{études pratiques} sont des projets réalisé chaque année pas les élèves du département Informatique de l'INSA de Rennes. Ils s'étalent sur toute la durée de l'année scolaire et visent à permettre aux étudiants de dévelloper leur sens du travail et équipe et leur autonomie. Les sujets sont aussi divers que variés, allant de prtotypes pour une application au site web, en passant par les réalisatiions d'IA.
+Les \textit{études pratiques} sont des projets réalisé chaque année pas les élèves du département Informatique de l'INSA de Rennes. Ils s'étalent sur toute la durée de l'année scolaire et visent à permettre aux étudiants de développer leur sens du travail et équipe et leur autonomie. Les sujets sont aussi divers que variés, allant de prototypes applicatifs au site web, en passant par les réalisations d'IA.
 
 Cette étude pratique en particulier se présente sous la forme d'une contribution à un logiciel dont le code source est ouvert, c'est à dire qu'il est mis à disposition du public pour modification (logiciel dit "open-source").
 
 \section{Latexila}
 \label{sec:latexila}
-Latexila est un projet d'éditeur LaTeX pour le projet Gnome, dont le développement a commencé en 2009 à l'initiative de Sébastien Wilmet, qui est encore à ce jour le mainteneur du projet. Bien que commencé en C, le projet a été porté vers le language Vala en 2010. LaTeXiLa adopte une approche centré sur le code, ce qui lui permet d'être bien plus léger que nombre d'autres éditeurs, comme TeXMaker par exemple. De par cette philosophie, il ne possède pas de module WISWIG.
+Latexila est un projet d'éditeur LaTeX pour le projet Gnome, dont le développement a commencé en 2009 à l'initiative de Sébastien Wilmet, qui est encore à ce jour le mainteneur du projet. Bien que commencé en C, le projet a été porté vers le langage Vala en 2010. LaTeXiLa adopte une approche centré sur le code, ce qui lui permet d'être bien plus léger que nombre d'autres éditeurs, comme TeXMaker par exemple. De par cette philosophie, il ne possède pas de module WYSIWYG.
 % need ref for WISWIG
 %see more @https://wiki.gnome.org/Apps/LaTeXila/History
 
 \subsection{À propos de \LaTeX{}}
-LaTeX est un language utilisé pour la composition de documents. Il permet notamment de mettre en place des feuilles de style normalisées ou encore de construire des expressions mathématiques.
+LaTeX est un langage utilisé pour la composition de documents. Il permet notamment de mettre en place des feuilles de style normalisées ou encore de construire des expressions mathématiques.
 % write something here ?
 
-\subsection{Le language Vala}
+\subsection{Le langage Vala}
 \label{sss:vala}
-Vala est un laguage développé pour le projet Gnome. Il vise à être une alternative au C\# et au Java en proposant une syntaxe puissante pour la programation orientée objet.
+Vala est un langage développé pour le projet Gnome. Il vise à être une alternative au C\# et au Java en proposant une syntaxe puissante pour la programation orientée objet.
 Il se base sur la librairie GObject et est compilé en C via la commande `valac`.
 
 \begin{lstlisting} % TODO encadrer
@@ -68,25 +68,25 @@ void main () {
 
 \section{Compiler LaTeXila}
 \label{cha:compiler}
-La compilation d'un projet GNOME est un processus complexe pour un non-initié. L'obtention de paquets en pré-série souvent non stables est déconseillée pour les non-développeurs du fait de leur stabilité toute relative.
+La compilation d'un projet GNOME est un processus complexe pour un non-initié. L'obtention de paquets en pré-série souvent non stables est déconseillée pour les non-développeurs du fait de leur stabilité toute relative. On utilise donc des outils spécifiques de manière à séparer l'environnement de travail et 
 
 \subsection{Jhbuild}
 \label{sub:jhbuild}
 \begin{quote}
   JHBuild allows you to build and run Gnome platform and applications building the required modules in a sandbox environment, isolating the installation; so there is no need to build and run Gnome inside a virtual machine. \textit{wiki.gnome.org}
 \end{quote}
-Comme indiqué ci-dessus, il s'agit d'un outil conçu pour permettre au développeur de construire les librairies d'un projet dans un environement bac-à-sable, de manière à éviter une instabilité de la machine de développement causée par l'utilisation de librairies en pré-version. Il fournit certaines commandes très utiles, telles que :
+Comme indiqué ci-dessus, il s'agit d'un outil conçu pour permettre au développeur de construire les librairies d'un projet dans un environnement bac-à-sable, de manière à éviter une instabilité de la machine de développement causée par l'utilisation de librairies en pré-version. Il fournit certaines commandes très utiles, telles que :
 \begin{description}
   \item[jhbuild update <package>] Met à jour le paquet et toute ses dépendances
   \item[jhbuild build <package>] Met à jour et compile le paquet et toute ses dépendances
   \item[jhbuild buildone <package>] Ne compile que le paquet ciblé
-  \item[jhbuild make <target>] Execute le Makefile à l'emplacement courant
+  \item[jhbuild make <target>] Exécute le Makefile à l'emplacement courant
 \end{description}
 
 Ainsi, un \textit{jhbuild build latexila} réalise, pour chaque dépendances de latexila :
 \begin{description} 
   \item[Mise à jour] Un \textit{checkout} sur la branche master du dépôt, suivi d'un \textit{fetch} puis d'un \textit{rebase} 
-  \item[Compilation] Execution du \textit{make all}
+  \item[Compilation] Exécution du \textit{make all}
 \end{description}
 
 Dans le cas de la compilation d'une version de test, on utilisera \textit{jhbuild make}, qui nous permettra de compiler sur la branche courante.
@@ -98,19 +98,19 @@ Le but de cette étude pratique est d'ajouter à la complétion le support de la
 
 \section{Gestion du projet} % (fold)
 \label{sec:git}
-Git est le CVS utilisé par la très grande majorité des projets open-source. LaTeXiLa est hébergé sur le dépôt du projet Gnome, mais un miroir est diponible sur Github %adresse 
-Pour ce pojet, nous avons créé un \textit{fork} du dépot principal sur Github et travaillé sur une branche annexe, régulièrement mise à jour à partir du dépot officiel.
+Git est le CVS utilisé par la très grande majorité des projets open-source. LaTeXiLa est hébergé sur le dépôt du projet Gnome, mais un miroir est disponible sur Github %adresse 
+Pour ce projet, nous avons créé un \textit{fork} du dépôt principal sur Github et travaillé sur une branche annexe, régulièrement mise à jour à partir du dépôt officiel.
 Les soumissions sont faites via le bugzilla du projet Gnome, ce qui permet au mainteneur de commenter le code soumis. Il s'ensuit ensuite un va-et-vient entre le mainteneur et le développeur jusqu'à la fusion du patch dans la branche principale.
 % subsection git (end)
 
 \section{Tâche à réaliser} % (fold)
 \label{sec:tache_a_realiser}
-La tâche à réaliser est l'amélioration de la complétion des commande de références. Commme mentionné précedemment\ref{sub:completion}, il existe un système déjà en place.
+La tâche à réaliser est l'amélioration de la complétion des commande de références. Comme mentionné précédemment\ref{sub:completion}, il existe un système déjà en place.
 
 
 \subsection{La complétion dans LaTeXila 2.2}
 \label{sub:completion}
-La version 2.2 de LaTeXiLa fournit une complétion exhaustive des éléments statiques du language LaTeX en se basant sur un fichier XML descriptif lu au démarrage du programme. 
+La version 2.2 de LaTeXiLa fournit une complétion exhaustive des éléments statiques du langage LaTeX en se basant sur un fichier XML descriptif lu au démarrage du programme. 
 % more @ https://wiki.gnome.org/Projects/Vala/About
 
 
@@ -136,6 +136,6 @@ L'étape suivante a été l'intégration de
 \section{Intégration des fichiers non-ouverts}
 
 \chapter{Conclusion}
-Cette étude pratique a été pour nous l'occasion de découvrir le fonctionement des projets open-source.
+Cette étude pratique a été pour nous l'occasion de découvrir le fonctionnement des projets open-source.
 
 \end{document}
